@@ -234,6 +234,10 @@
       
       \item \code{tools::Rd2ex(commentDontrun = FALSE)} failed if the
       block had only one line.
+
+      \item Hexadecimal constants such as \code{} which were incorrectly
+      qualified by \code{L} were parsed incorrectly since \R 3.0.0, with
+      a slightly garbled warning. (\PR{15753})
     }
   }
 }
